// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component should match snapshot 1`] = `
<Fragment>
  Click on plant you like.
  <button
    id="toggle-fruits"
    onClick={[Function]}
  >
    Hide fruits
  </button>
  <div
    className="list"
  >
    <Plant
      key="apples"
      name="apples"
      onClick={[Function]}
    />
    <Plant
      key="bananas"
      name="bananas"
      onClick={[Function]}
    />
    <Plant
      key="potatoes"
      name="potatoes"
      onClick={[Function]}
    />
    <Plant
      key="strawberries"
      name="strawberries"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`List component should match snapshot after click 1`] = `
<Fragment>
  Click on plant you like.
  <button
    id="toggle-fruits"
    onClick={[Function]}
  >
    Hide fruits
  </button>
  <div
    className="list"
  >
    <Plant
      key="potatoes"
      name="potatoes"
      onClick={[Function]}
    />
  </div>
</Fragment>
`;
